MCR-3636 fix tree view collapse

--- a/mycore-viewer/src/main/less/templates/default/Iview.less
+++ b/mycore-viewer/src/main/less/templates/default/Iview.less
@@ -83,12 +83,13 @@
 
   .chapterTreeDesktop, .textSearch {
     .expander + * {
-      margin-left: 0.8em;
+      margin-left: 0.5em;
     }
 
     .expander {
       cursor: pointer;
       margin-top: 3px;
+      width: 1em;
     }
 
     ol[data-opened=false] {
